# chess-bevy-game

./: Cargo.toml  README.md  run.sh  rust-toolchain.toml
src/: Readme.md  assets_helper.rs  chess_board_plugin.rs  cursor_cords_plugin.rs  custom_cursor_plugin.rs  discard_tray_plugin.rs  display_current_turn_plugin.rs  main.rs  piece_parser.rs  removed_pieces_holder_plugin.rs  titles.rs  ui_menu_plugin.rs
src/models/: app_state.rs  chess_cell.rs  chess_models.rs  chess_move_state.rs  chess_piece.rs  common_chess.rs  common_resources.rs  mod.rs  removed_chess_piece.rs
